# fury

python/: COMPILE_GUIDE.md  build_and_test.py  pyproject.toml  test_buffer_comprehensive.py
python/pyfory/: __init__.py
python/pyfory/nanobind_ext/: BUILD  CMakeLists.txt  QUICKSTART.md  README.md  SIMPLE_START.md  __init__.py  buffer.cpp  buffer.h  build.sh  demo.py  examples.py  nanobind_minimal.cpp  nanobind_stub.cpp  pyfory_nb.cpp  pyproject.toml  setup.py  simple_build.sh  test_nanobind.py  test_quick.py  verify.py
python/pyfory/tests/: test_buffer.py
