[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "pyfory_nb"
version = "0.1.0"
description = "nanobind implementation of PyFory Buffer"
requires-python = ">=3.8"
dependencies = ["nanobind>=2.0.0"]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
